# bias-exploration

./: README.md
ai-bias-search/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.yaml  config.yaml.example  docker-compose.yml  justfile  pyproject.toml
ai-bias-search/.github/workflows/: ci.yml
ai-bias-search/ai_bias_search/: __init__.py  cli.py
ai-bias-search/ai_bias_search/config/: scopus.yaml
ai-bias-search/ai_bias_search/connectors/: __init__.py  base.py  consensus.py  core.py  (+5 more)
ai-bias-search/configs/: config.yaml.example  llm_prompts.example.yaml  llm_scenarios.example.yaml
ai-bias-search/docs/: architecture.md  connectors.md  development.md  enrichment.md  evaluation.md
ai-bias-search/queries/: queries.csv
ai-bias-search/scripts/: entrypoint.sh
ai-bias-search/tests/: conftest.py  test_acronym_extraction.py  test_biases.py  test_cli_collect.py  test_cli_eval.py  test_cli_llm_pipeline.py  test_cli_report.py  test_core_connector.py  test_core_rankings.py  test_diagnostics.py  test_impact_factor.py  test_io.py  test_jif_plots.py  test_llm_client.py  test_llm_config.py  test_llm_evaluator.py  test_llm_normalizer.py  test_llm_pairwise.py  test_llm_parser.py  test_llm_prompts.py  test_normalize_records.py  test_openalex_connector.py  test_openalex_enrich.py  test_openalex_retry_policy.py  test_overlap.py  test_ranking.py  test_rankings_refactor.py  test_report.py  test_request_capture.py  test_sanity.py  test_scopus_connector.py  test_scopus_enrich.py  test_scopus_rankings.py  test_scopus_stats.py
(+70 files in other folders)
